========================
0.0.71
========================

- added support fro inline enums for `String.toJSONSchema()`
- added support for inline enums in Schema actions
- added `webp` image size measurement by [Marek Mráz](https://github.com/Mrazbb)

========================
0.0.70
========================

- `schema.action()` supports a link to the JSON schema declaration
- fixed making insecure HTTPS requests by [DJTripper](https://github.com/DJTripper)
- fixed `RESTBuilder.insecure()` method
- extended `jsonschema.transform(value, callback, [partial])` by adding `partial` argument
- `mail_smtp_options` supports `token {String}` for OAuth 2.0 Access Token
- added `QueryBuilder.equal(object)` method
- fixed `UNAUTHORIZED()` method
- fixed a default nullable value for `enum` types in the Total.js schemas

========================
0.0.69
========================

- fixed `input` filter in the Schema actions
- added `API().debug()` method for quick printing data
- added `API().audit()` method
- added `RESTBuilder().debug()` method for quick printing data
- added `CALL().debug()` method for quick printing data
- improved checking SVG during uploading
- updated `opt.files` by adding downloading files from URL address in the `REQUEST()` method
- updated `RESTBuilder.file(name, filename, [buffer/url])` method
- fixed `Object` type without properties in JSON schemas
- fixed built-in `session` mechanism (a problem with storing sessionid/userid with the dash `-`)
- fixed streaming videos in the debug mode
- improved HTML Parser

========================
0.0.68
========================

- fixed sending files via `REQUEST()` method (a problem with the buffer)
- added `$.variables(str, [data])` method
	- `str` supports dynamic arguments in the form `{user.key}, {model.key}, {data.key}, {params.key} or {query.key}`
- added QueryBuilder by adding `QueryBuilder.audit($, [message], [type])` method