@@ -5,6 +5,7 @@
 - added support fro inline enums for `String.toJSONSchema()`
 - added support for inline enums in Schema actions
 - added `webp` image size measurement by [Marek Mráz](https://github.com/Mrazbb)
+- added `promise` support for the `TotalAPI()` method.
 
 ========================
 0.0.70
